--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,25 +1,23 @@
-
 .card {
-  display: grid;
-  grid-template-columns: 300px;
-  grid-template-rows: 210px 210px 80px;
-  grid-template-areas: "image" "text" "stats";
-
-  font-size: roboto;
+  background: white;
   border-radius: 18px;
-  background:white;
-  box-shadow: 5px 5px 15px rgb(0,0,0,0.9);
+  box-shadow: 5px 5px 15px rgb(0, 0, 0, 0.9);
+  display: grid;
+  font-size: roboto;
+  grid-template: 210px 210px 80px;
+  grid-template-areas: 'image' 'text' 'stats';
+  grid-template-columns: 300px;
   text-align: center;
-
 }
+
 .card-image {
   grid-area: image;
 }
 
 .card-image img {
-  width: 100%;
-  border-top-left-radius: 15px ;
+  border-top-left-radius: 15px;
   border-top-right-radius: 15px;
+  width: 100%;
 }
 
 .card-text {
@@ -28,7 +26,7 @@
 }
 
 .card-text span {
-  color: #3C91E6;
+  color: #3c91e6;
   font-size: 14px;
 }
 
@@ -39,28 +37,27 @@
 }
 
 .card-text h2 {
-  margin-top: 0px;
   font-size: 28px;
 }
 
 .card-stats {
-  grid-area: stats;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  border-top: #1cbb9b;
+  background: #23f0c7;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
-  background: #23F0C7;
+  border-top: #1cbb9b;
+  display: grid;
+  grid-area: stats;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
 }
 
 .card-stats .stat {
-  display: flex;
   align-items: center;
-  justify-content: center;
+  color: #342e37;
+  display: flex;
   flex-direction: column;
+  justify-content: center;
   padding: 5px;
-  color: #342E37;
 }
 
 .card-stats .type {
@@ -73,23 +70,23 @@
   font-size: 22px;
   font-weight: 500;
 }
+
 .card-stats .border {
   border-left: 1px solid #1cbb9b;
   border-right: 1px solid #1cbb9b;
 }
-/* https://www.youtube.com/watch?v=cwC1qdPWBKo&ab_channel=RedStapler */
 
+/* https://www.youtube.com/watch?v=cwC1qdPWBKo&ab_channel=RedStapler */
 .cardTrunfo {
-  
-  display: flex;
-  justify-content: center;
   align-items: center;
-  position: absolute;
-  margin: 20px;
-  width: 90px;
-  height: 90px;
-  font-weight: 700;
+  background-color: #f5d547;
+  border: 2px #db3069 solid;
   border-radius: 50%;
-  border: 2px #DB3069 solid;
-  background-color: #F5D547;
+  display: flex;
+  font-weight: 700;
+  height: 90px;
+  justify-content: center;
+  margin: 20px;
+  position: absolute;
+  width: 90px;
 }
