--- a/src/App.css
+++ b/src/App.css
@@ -2,25 +2,42 @@ body {
   background-color: #eee5e9;
 }
 
+.trunfo-game {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
 .create-card {
   display: flex;
   margin: 30px;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .preview-card {
   align-items: center;
-  border: 1px solid black;
   display: flex;
+  flex-flow: column;
   justify-content: center;
-  margin: 5px;
-  max-width: 500px;
-  width: 100%;
+  margin: 10px 5px;
+  min-width: 500px;
+}
+
+.preview-card h2{
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 25px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .section-cards {
   border-top: 2px solid black;
   display: flex;
-  margin-top: 20px;
+  flex-flow: row wrap; 
+  justify-content: center;
+  align-items: center;
 }
 
 .card-button {
@@ -35,4 +52,9 @@ body {
   font-weight: 700;
   margin-top: 10px;
   padding: 5px 10px;
+}
+
+.card:hover {
+  transform: scale(1.2);
+  box-shadow: 5px 5px 5px rgb(0, 0, 0, 0.6);
 }
