--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -4,9 +4,9 @@
   box-shadow: 5px 5px 15px rgb(0, 0, 0, 0.9);
   display: grid;
   font-size: roboto;
-  grid-template: 210px 210px 80px;
   grid-template-areas: 'image' 'text' 'stats';
   grid-template-columns: 300px;
+  grid-template-rows: 210px 210px 80px;
   text-align: center;
 }
 
@@ -18,6 +18,7 @@
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   width: 100%;
+  height: 210px;
 }
 
 .card-text {
@@ -26,8 +27,11 @@
 }
 
 .card-text span {
-  color: #3c91e6;
-  font-size: 14px;
+  color: #23f0c7;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: 700;
+  -webkit-text-stroke: 0.3px black;
 }
 
 .card-text p {
@@ -89,4 +93,48 @@
   margin: 20px;
   position: absolute;
   width: 90px;
+  overflow: hidden;
 }
+
+.cardTrunfo:after {
+  animation: shine 5s ease-in-out  infinite;
+  animation-fill-mode: forwards;  
+  content: "";
+  position: absolute;
+  top: -110%;
+  left: -210%;
+  width: 200%;
+  height: 200%;
+  opacity: 0;
+  transform: rotate(30deg);
+  
+  background: rgba(255, 255, 255, 0.13);
+  background: linear-gradient(
+    to right, 
+    rgba(255, 255, 255, 0.13) 0%,
+    rgba(255, 255, 255, 0.13) 77%,
+    rgba(255, 255, 255, 0.5) 92%,
+    rgba(255, 255, 255, 0.0) 100%
+  );
+}
+.cardTrunfo:active:after {
+  opacity: 0;
+}
+
+@keyframes shine{
+  10% {
+    opacity: 1;
+    top: -30%;
+    left: -30%;
+    transition-property: left, top, opacity;
+    transition-duration: 0.7s, 0.7s, 0.15s;
+    transition-timing-function: ease;
+  }
+  100% {
+    opacity: 0;
+    top: -30%;
+    left: -30%;
+    transition-property: left, top, opacity;
+  }
+}
+/* http://jsfiddle.net/nqQc7/512/ */
