--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,3 +1,143 @@
+.card {
+  background: white;
+  border-radius: 18px;
+  box-shadow: 5px 5px 15px rgb(0, 0, 0, 0.9);
+  display: grid;
+  font-size: roboto;
+  grid-template-areas: 'image' 'text' 'stats';
+  grid-template-columns: 300px;
+  grid-template-rows: 210px 210px 80px;
+  text-align: center;
+}
+
 .card-image {
   grid-area: image;
 }
+
+.card-image img {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  width: 100%;
+  height: 210px;
+}
+
+.card-text {
+  grid-area: text;
+  margin: 25px;
+}
+
+.card-text span {
+  color: #23f0c7;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: 700;
+  -webkit-text-stroke: 0.3px black;
+}
+
+.card-text p {
+  color: gray;
+  font-size: 15px;
+  font-weight: 300;
+}
+
+.card-text h2 {
+  font-size: 28px;
+}
+
+.card-stats {
+  background: #23f0c7;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  border-top: #1cbb9b;
+  display: grid;
+  grid-area: stats;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+.card-stats .stat {
+  align-items: center;
+  color: #342e37;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 5px;
+}
+
+.card-stats .type {
+  font-size: 11px;
+  font-weight: 300;
+  text-transform: uppercase;
+}
+
+.card-stats .value {
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.card-stats .border {
+  border-left: 1px solid #1cbb9b;
+  border-right: 1px solid #1cbb9b;
+}
+
+/* https://www.youtube.com/watch?v=cwC1qdPWBKo&ab_channel=RedStapler */
+.cardTrunfo {
+  align-items: center;
+  background-color: #f5d547;
+  border: 2px #db3069 solid;
+  border-radius: 50%;
+  display: flex;
+  font-weight: 700;
+  height: 90px;
+  justify-content: center;
+  margin: 20px;
+  position: absolute;
+  width: 90px;
+  overflow: hidden;
+}
+
+.cardTrunfo:after {
+  animation: shine 5s ease-in-out  infinite;
+  animation-fill-mode: forwards;
+  background: rgba(255, 255, 255, 0.13);
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.13) 0%,
+    rgba(255, 255, 255, 0.13) 77%,
+    rgba(255, 255, 255, 0.5) 92%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  content: '';
+  height: 200%;
+  left: -210%;
+  opacity: 0;
+  position: absolute;
+  top: -110%;
+  transform: rotate(30deg);
+  width: 200%;
+}
+
+.cardTrunfo:active:after {
+  opacity: 0;
+}
+
+@keyframes shine {
+
+  10% {
+    left: -30%;
+    opacity: 1;
+    top: -30%;
+    transition-duration: 0.7s , 0.7s , 0.15s;
+    transition-property: left , top , opacity;
+    transition-timing-function: ease;
+  }
+
+  100% {
+    left: -30%;
+    opacity: 0;
+    top: -30%;
+    transition-property: left , top , opacity;
+  }
+}
+
+/* http://jsfiddle.net/nqQc7/512/ */
